# agent-conclave

./: .env.example  .gitignore  Dockerfile  README.md  agent-conclave-project.md  deploy.sh  pyproject.toml  run_local.sh
agents/orchestrator/: Dockerfile  agent.py  pyproject.toml
agents/research_a/: Dockerfile  agent.py  pyproject.toml
agents/research_b/: agent.py  pyproject.toml
agents/research_c/: Dockerfile  agent.py  pyproject.toml
agents/synthesizer/: agent.py  pyproject.toml
backend/: agents.py  graph.py  main.py
frontend/: app.js  index.html  style.css
infra/: DEPLOYMENT.md  cloudbuild.yaml
mcp/: search_server.py
mcp_servers/: db_server.py  search_server.py
migrations/: 001_initial_schema.sql
